Updated all APIs, updates to logs
