# storage/api-docs/api-docs.json
@@ -1390,6 +1390,100 @@
                 ]
             }
         },
+        "/api/logs": {
+            "get": {
+                "tags": [
+                    "Logs"
+                ],
+                "summary": "Get Logs",
+                "description": "",
+                "operationId": "",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "include",
+                        "in": "query",
+                        "description": "relationships to include (Comma seperated)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "filter[asset_id]",
+                        "in": "query",
+                        "description": "asset_id of Log",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "filter[message]",
+                        "in": "query",
+                        "description": "message of Log",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "filter[asset.serial]",
+                        "in": "query",
+                        "description": "asset.serial of Log",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "AzureAD": []
+                    }
+                ]
+            }
+        },
+        "/api/logs/{id}": {
+            "get": {
+                "tags": [
+                    "Logs"
+                ],
+                "summary": "Get Log by ID",
+                "description": "",
+                "operationId": "",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of a Log",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized user"
+                    }
+                },
+                "security": [
+                    {
+                        "AzureAD": []
+                    }
+                ]
+            }
+        },
         "/api/me": {
             "get": {
                 "tags": [
